FIPS-9045/FIPS-9083 :: Increase versions of dependencies
Change-Id: I19de33e511f5b348dc07dc757412989ce546e19f